<resources>
    <string name="app_name">Menu CRUD</string>
    <string name="func">CRUD Funcionario</string>
    <string name="produto">CRUD Produto</string>
    <string name="comanda">CRUD Comanda</string>
    <string name="act1">CRUD Funcionario</string>
    <string name="act2">CRUD Produto</string>
    <string name="act3">CRUD Comanda</string>

    <string name="buscar">Buscar</string>
    <string name="inserir">Inserir</string>
    <string name="excluir">Excluir</string>
    <string name="modificar">Modificar</string>
    <string name="listar">Listar</string>

    <string name="id">ID</string>
    <string name="nome">Nome</string>
    <string name="tele">Telefone</string>
    <string name="sala">Salario</string>
    <string name="cargo">Cargo</string>
    <string name="Lcargo"> 1 - Gerente\n2 - Caixa\n3 - Atendente</string>
    <string name="valor">Valor</string>

    <string name="funinsert">Funcionario inserido com sucesso</string>
    <string name="funmod">Funcionario modificado com sucesso</string>
    <string name="fundelete">Funcionario deletado com sucesso</string>
    <string name="funbusca">Funcionario inexistente</string>

    <string name="prodinsert">Produto inserido com sucesso</string>
    <string name="prodmod">Produto modificado com sucesso</string>
    <string name="proddelete">Produto deletado com sucesso</string>
    <string name="prodbusca">Produto inexistente</string>

    <string name="cominsert">Comanda inserida com sucesso</string>
    <string name="commod">Comanda modificada com sucesso</string>
    <string name="comdelete">Comanda deletada com sucesso</string>
    <string name="combusca">Comanda inexistente</string>
</resources>