<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnfunc"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/func"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnprod"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnfunc" />

    <Button
        android:id="@+id/btncom"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/comanda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnprod" />
</androidx.constraintlayout.widget.ConstraintLayout>